added ios support with ionic framework

--- a/client/home.html
+++ b/client/home.html
@@ -1,4 +1,4 @@
 <template name='home'>
   <h1>Welcome to Eye for Energy</h1>
-  <p>more blurb.</p>
+  <p>Crowd Source Energy Waste - map the results and help improve things.</p>
 </template>
