--- a/client/upload.html
+++ b/client/upload.html
@@ -1,10 +1,11 @@
 <template name='upload'>
-  <head>
-    <title>Upload View</title>
-  </head>
-  <body>
-    <button style='width:125px;height:40px;font-size:1.5em;display:block;margin:40px auto;text-align:center'>Take Pic</button>
-    <div id='venues'></div>
-
-</body>
+  <button class='takePic' style='width:125px;height:40px;font-size:1.5em;display:block;margin:40px auto;text-align:center'>Take Pic</button>
+  {{#ionList}}
+  {{#each venues}}
+  {{#ionItem buttonRight=true avatar=true}}
+  <img src="{{categories.[0].icon.prefix}}bg_64.png"><h2>{{name}}</h2>
+  <button class="button button-positive venu" id="{{id}}">{{> ionIcon icon="ios-arrow-right"}}</button>
+  {{/ionItem}}
+  {{/each}}
+{{/ionList}}
 </template>
