fixed mobile problem and added live 4Sq pull

--- a/client/home.html
+++ b/client/home.html
@@ -1,4 +1,7 @@
 <template name='home'>
+  <div class='padContainer'>
   <h1>Welcome to Eye for Energy</h1>
   <p>Crowd Source Energy Waste - map the results and help improve things.</p>
+</div>
+
 </template>
