--- a/client/home.html
+++ b/client/home.html
@@ -1,4 +1,10 @@
 <template name='home'>
+
+  {{#contentFor "headerTitle"}}
+    <h1 class="title">Home</h1>
+  {{/contentFor}}
+
+
   <div class='padContainer'>
   <h1>Welcome to Eye for Energy</h1>
   <p>Crowd Source Energy Waste - map the results and help improve things.</p>
