--- a/client/settings.html
+++ b/client/settings.html
@@ -1,5 +1,12 @@
 <template name='settings'>
+
+  {{#contentFor "headerTitle"}}
+    <h1 class="title">Settings</h1>
+  {{/contentFor}}
+
+
   <div class='padContainer'>
   <h1>Settings</h1>
+  <p>This is where user stuff will go.</p>
 </div>
 </template>
