--- a/client/upload.html
+++ b/client/upload.html
@@ -1,4 +1,9 @@
 <template name='upload'>
+
+  {{#contentFor "headerTitle"}}
+    <h1 class="title">Upload</h1>
+  {{/contentFor}}
+
   {{#ionContent}}
   <button class='takePic' style='width:125px;height:40px;font-size:1.5em;display:block;margin:40px auto;text-align:center'>Take Pic</button>
 
