--- a/client/_tabs.html
+++ b/client/_tabs.html
@@ -1,8 +1,8 @@
 <template name="_tabs">
     {{#ionTabs style="ios"}}
       {{> ionTab title="Home" path="home" iconOff="ios-home-outline" iconOn="ios-home"}}
-      {{> ionTab title="Upload" path="upload" iconOff="ios-star-outline" iconOn="ios-star"}}
-      {{> ionTab title="Map" path="map" iconOff="ios-heart-outline" iconOn="ios-heart"}}
+      {{> ionTab title="Upload" path="upload" iconOff="ios-camera-outline" iconOn="ios-camera"}}
+      {{> ionTab title="Map" path="map" iconOff="ios-location-outline" iconOn="ios-location"}}
       {{> ionTab title="Settings" path="settings" iconOff="ios-gear-outline" iconOn="ios-gear"}}
     {{/ionTabs}}
 </template>
