--- a/client/home.html
+++ b/client/home.html
@@ -7,7 +7,7 @@
 
   <div class='padContainer'>
   <h1>Welcome to Eye for Energy</h1>
-  <p>Crowd Source Energy Waste - map the results and help improve things.</p>
+  <p style='font-size:1.4em'>Crowd-sourcing information about energy waste.</p>
 </div>
 
 </template>
