--- a/client/settings.html
+++ b/client/settings.html
@@ -6,7 +6,8 @@
 
 
   <div class='padContainer'>
-  <h1>Settings</h1>
-  <p>This is where user stuff will go.</p>
+    <div class='lgin'>
+    {{> loginButtons}}
+  </div>
 </div>
 </template>
